--- a/assets/scss/components/_home.scss
+++ b/assets/scss/components/_home.scss
@@ -60,11 +60,13 @@
             margin-left: 50%;
             transform: translateX(-50%);
 
-            width: 25%;
+            width: 100%;
         }
 
         input {
             padding: $rhythm;
+
+            max-width: 50%;
 
             height: $rhythm * 2;
         }
